--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<title>fighting金融理财投资公司</title>
 <head>
+    <meta charset="UTF-8">
+    <title>fighting金融理财投资公司</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -31,13 +31,13 @@
 <div id="nav">
     <div class="wrap">
         <ul>
-            <li>首页</li>
-            <li>关于我们</li>
-            <li>服务内容</li>
-            <li>新闻内容</li>
-            <li>人才招聘</li>
-            <li>在线留言</li>
-            <li>联系我们</li>
+            <li><a href="">首页</a></li>
+            <li><a href="about.html">关于我们</a></li>
+            <li><a href="">服务内容</a></li>
+            <li><a href="">新闻内容</a></li>
+            <li><a href="">人才招聘</a></li>
+            <li><a href="onlineMessage.html">在线留言</a></li>
+            <li><a href="">联系我们</a></li>
         </ul>
     </div>
 </div>
