--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <div id="nav">
                 <div class="wrap">
                     <ul>
-                        <li><a href="">首页</a></li>
+                        <li><a href="index.html">首页</a></li>
                         <li><a href="about.index">关于我们</a></li>
                         <li><a href="">服务内容</a></li>
                         <li><a href="">新闻内容</a></li>
