--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <div class="wrap">
                     <ul>
                         <li><a href="index.html">首页</a></li>
-                        <li><a href="about.index">关于我们</a></li>
+                        <li><a href="about.html">关于我们</a></li>
                         <li><a href="">服务内容</a></li>
                         <li><a href="">新闻内容</a></li>
                         <li><a href="">人才招聘</a></li>
