--- a/about.html
+++ b/about.html
@@ -11,40 +11,39 @@
 </head>
 <body>
         <div id="header">
-                <div class="wrap">
-                    <img src="img/logo.jpg" alt="logo">
-                    <div id="search-share">
-                        <div id="search-box">
-                            <input id="search-txt" type="text" placeholder="请输入关键字"><button id="btn">搜索</button>
-                        </div>
-                        <ul id="share">
-                            <li>
-                                <a class="qq" href="#"></a>
-                            </li>
-                            <li>
-                                <a class="weixin" href="#"></a>
-                            </li>
-                            <li>
-                                <a class="weibo" href="#"></a>
-                            </li>
-                        </ul>
-                    </div>	
-                </div>
-            </div>
-            <div id="nav">
-                <div class="wrap">
-                    <ul>
-                        <li><a href="index.html">首页</a></li>
-                        <li><a href="about.html">关于我们</a></li>
-                        <li><a href="">服务内容</a></li>
-                        <li><a href="">新闻内容</a></li>
-                        <li><a href="">人才招聘</a></li>
-                        <li><a href="onlineMessage.html">在线留言</a></li>
-                        <li><a href="">联系我们</a></li>
+            <div class="wrap">
+                <img src="img/logo.jpg" alt="logo">
+                <div id="search-share">
+                    <div id="search-box">
+                        <input id="search-txt" type="text" placeholder="请输入关键字"><button id="btn">搜索</button>
+                    </div>
+                    <ul id="share">
+                        <li>
+                            <a class="qq" href="#"></a>
+                        </li>
+                        <li>
+                            <a class="weixin" href="#"></a>
+                        </li>
+                        <li>
+                            <a class="weibo" href="#"></a>
+                        </li>
                     </ul>
                 </div>
             </div>
-            <div id="banner">
+        </div>
+        <div id="nav">
+            <div class="wrap">
+                <ul>
+                    <li><a href="index.html">首页</a></li>
+                    <li><a href="about.html">关于我们</a></li>
+                    <li><a href="">服务内容</a></li>
+                    <li><a href="">新闻内容</a></li>
+                    <li><a href="">人才招聘</a></li>
+                    <li><a href="onlineMessage.html">在线留言</a></li>
+                    <li><a href="">联系我们</a></li>
+                </ul>
             </div>
+        </div>
+        <div id="banner"></div>
 </body>
 </html>
