--- a/about.html
+++ b/about.html
@@ -45,5 +45,44 @@
             </div>
         </div>
         <div id="banner"></div>
+        <div id="about">
+            <div class="list">
+                <div>关于我们</div>
+                <ul>
+                    <li>公司简介</li>
+                    <li>董事长致辞</li>
+                    <li>总裁致辞</li>
+                    <li>公司高管</li>
+                    <li>金牌投资人</li>
+                    <li>全国网点</li>
+                </ul>
+            </div>
+            <div class="content">
+                <div>
+                    深圳市创新投资集团有限公司（简称“深创投”）是深圳市政府1999年出资并引导社会资本出资设立的、专业从事创业投资的有限责任公司。公司成立以来始终致力于培育民族产业、塑造民族品牌、促进经济转型升级和新兴产业发展。目前注册资本42亿元，管理各类基金总规模约2803.23亿元。
+                    深创投主要投资中小企业、自主创新高新技术企业和新兴产业企业、初创期和成长期及转型升级企业，涵盖信息科技、互联网/新媒体、生物医药、新能源/节能环保、化工/新材料、高端装备制造、消费品/现代服务等国家政策重点扶持的行业领域。
+                    截至2018年3月底，深创投投资企业数量、投资企业上市数量均位居国内创投行业第一位：已投资项目859个，累计投资金额约352亿元，其中138家投资企业分别在全球16个资本市场上市。专业的投资、深度的服务、严密的风控，成就了深创投创投业务IRR 40.32%的优秀业绩。
+                    深创投充分发挥创投的先导性作用，率先建立并管理了97支政府引导性创投基金，规模约294.54亿元，形成了全国性的投资和服务网络。目前，深创投还管理着60亿元国家中小企业发展基金首支实体基金、千亿深圳市政府引导母基金、百亿佛山市政府双创引导母基金，参与管理百亿山东省财金红土PPP基金，担任前海股权投资母基金唯一的机构合伙人，并管理着多只中外合资基金、商业化基金。同时，深创投设有私募股权行业首家全资公募基金子公司——红土创新基金管理有限公司。
+                    凭借在创投领域的杰出表现，深创投在中国投资协会股权和创业投资专业委员会、清科集团、投中集团、《福布斯》中文版、上海证券报、证券时报等权威机构举办的内外资创投机构综合排名中连续多年名列前茅。
+                </div>
+                <div>
+                    十八载风雨兼程，十八载春华秋实。历经18年探索，深圳市创新投资集团全体员工秉承"诚笃、务实、创新、以人为本"的理念，率先建立科学高效的创业投资公司治理结构和风控体系，逐步发展成为国内领先、具有国际竞争力的创业投资集团，投资的企业在资本市场公开上市超过130家，产业布局遍布全国。
+                    当前，受益于我国改革发展红利的不断释放，全民创业的热情正在被点燃，大众创业、万众创新的时代向我们走来。
+                    我国创投行业面临千载难逢的历史机遇，呈现百舸争流、千帆竞发的大好局面。机遇与挑战并存，风险与回报同在。我们对未来充满信心。
+                    天道酬勤，厚德载物。我们相信，在全体股东和各界朋友的大力支持下，凭借公司多年来积累的人脉资源和业界口碑，我们这支敢于拼搏、能打硬仗、团结一心的员工团队，一定能在不久的将来创造新的辉煌，百尺竿头更进一步，以实实在在的业绩实现金融报国、产业强国之梦。
+                </div>
+                <div>
+                    深创投诞生于深圳这片创新的热土，发端于创业投资这一创新的行业，肩负着支持高新技术产业、带动深圳创业投资发展的使命。从她诞生之日起，创新就深深融入到深创投成长的历程之中。从开创"一头在内，一头在外"的中外合作基金运行模式，到率先打造全国范围的政府引导基金网络；从创立投资企业俱乐部，到专业化投资和全方位服务并进；创新已成为深创投的灵魂，是不断创新让我们始终走在行业的最前列。
+                    春华秋实。深创投十多年的发展，不仅创造了辉煌的业绩，也锤炼出近二百人的专业队伍，聚集了中国创投行业最早的一批精英。他们是投资家，拥有丰富的专业经验；他们是诊断师，为企业出谋划策；他们是培训师，成就了一批创业家的梦想。
+                    展望未来，"中国梦"在昭示着中国的明天。在这个追逐梦想、实现梦想的伟大时代，为中小企业插上腾飞的翅膀、为创业家实现创业的愿望是我们捧在手中的"创投梦"。我们不仅投资，更愿与企业成为荣辱与共的伙伴，聚彼此智慧，扬各自所长，一起去谱写我们共同成长、更加辉煌的新篇章。
+                </div>
+                <div>
+
+                </div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <script src="js/about.js"></script>
 </body>
 </html>
