--- a/about.html
+++ b/about.html
@@ -46,6 +46,9 @@
         </div>
         <div id="banner"></div>
         <div id="about">
+            <div class="wrap">
+
+            </div>
             <div class="list">
                 <div>关于我们</div>
                 <ul>
