--- a/onlineMessage.html
+++ b/onlineMessage.html
@@ -45,7 +45,7 @@
 		</div>
 	</div>
 	<div id="message">
-		<div class="wrapper">
+		<div class="wrap">
 			<div class="e">
 				您的邮箱：
 				<input class="email" type="text" placeholder="请输入您的邮箱">
