--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                 <div class="list">
                     <div>关于我们</div>
                     <ul>
-                        <li>公司简介</li>
+                        <li class="selected">公司简介</li>
                         <li>董事长致辞</li>
                         <li>总裁致辞</li>
                         <li>公司高管</li>
@@ -58,8 +58,8 @@
                         <li>全国网点</li>
                     </ul>
                 </div>
-                <div class="content">
-                    <div>
+                <div class="content" id="con">
+                    <div class="selected">
                         深圳市创新投资集团有限公司（简称“深创投”）是深圳市政府1999年出资并引导社会资本出资设立的、专业从事创业投资的有限责任公司。公司成立以来始终致力于培育民族产业、塑造民族品牌、促进经济转型升级和新兴产业发展。目前注册资本42亿元，管理各类基金总规模约2803.23亿元。
                         深创投主要投资中小企业、自主创新高新技术企业和新兴产业企业、初创期和成长期及转型升级企业，涵盖信息科技、互联网/新媒体、生物医药、新能源/节能环保、化工/新材料、高端装备制造、消费品/现代服务等国家政策重点扶持的行业领域。
                         截至2018年3月底，深创投投资企业数量、投资企业上市数量均位居国内创投行业第一位：已投资项目859个，累计投资金额约352亿元，其中138家投资企业分别在全球16个资本市场上市。专业的投资、深度的服务、严密的风控，成就了深创投创投业务IRR 40.32%的优秀业绩。
