--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 </ul>
             </div>
         </div>
-        <div id="banner"></div>
+        <!--<div id="banner"></div>-->
         <div id="about">
             <div class="wrap">
                 <div class="list">
@@ -63,8 +63,6 @@
                         深圳市创新投资集团有限公司（简称“深创投”）是深圳市政府1999年出资并引导社会资本出资设立的、专业从事创业投资的有限责任公司。公司成立以来始终致力于培育民族产业、塑造民族品牌、促进经济转型升级和新兴产业发展。目前注册资本42亿元，管理各类基金总规模约2803.23亿元。
                         深创投主要投资中小企业、自主创新高新技术企业和新兴产业企业、初创期和成长期及转型升级企业，涵盖信息科技、互联网/新媒体、生物医药、新能源/节能环保、化工/新材料、高端装备制造、消费品/现代服务等国家政策重点扶持的行业领域。
                         截至2018年3月底，深创投投资企业数量、投资企业上市数量均位居国内创投行业第一位：已投资项目859个，累计投资金额约352亿元，其中138家投资企业分别在全球16个资本市场上市。专业的投资、深度的服务、严密的风控，成就了深创投创投业务IRR 40.32%的优秀业绩。
-                        深创投充分发挥创投的先导性作用，率先建立并管理了97支政府引导性创投基金，规模约294.54亿元，形成了全国性的投资和服务网络。目前，深创投还管理着60亿元国家中小企业发展基金首支实体基金、千亿深圳市政府引导母基金、百亿佛山市政府双创引导母基金，参与管理百亿山东省财金红土PPP基金，担任前海股权投资母基金唯一的机构合伙人，并管理着多只中外合资基金、商业化基金。同时，深创投设有私募股权行业首家全资公募基金子公司——红土创新基金管理有限公司。
-                        凭借在创投领域的杰出表现，深创投在中国投资协会股权和创业投资专业委员会、清科集团、投中集团、《福布斯》中文版、上海证券报、证券时报等权威机构举办的内外资创投机构综合排名中连续多年名列前茅。
                     </div>
                     <div>
                         十八载风雨兼程，十八载春华秋实。历经18年探索，深圳市创新投资集团全体员工秉承"诚笃、务实、创新、以人为本"的理念，率先建立科学高效的创业投资公司治理结构和风控体系，逐步发展成为国内领先、具有国际竞争力的创业投资集团，投资的企业在资本市场公开上市超过130家，产业布局遍布全国。
@@ -78,13 +76,55 @@
                         展望未来，"中国梦"在昭示着中国的明天。在这个追逐梦想、实现梦想的伟大时代，为中小企业插上腾飞的翅膀、为创业家实现创业的愿望是我们捧在手中的"创投梦"。我们不仅投资，更愿与企业成为荣辱与共的伙伴，聚彼此智慧，扬各自所长，一起去谱写我们共同成长、更加辉煌的新篇章。
                     </div>
                     <div>
-
+                        深圳市创新投资集团有限公司（简称“深创投”）是深圳市政府1999年出资并引导社会资本出资设立的、专业从事创业投资的有限责任公司。公司成立以来始终致力于培育民族产业、塑造民族品牌、促进经济转型升级和新兴产业发展。目前注册资本42亿元，管理各类基金总规模约2803.23亿元。
+                        深创投主要投资中小企业、自主创新高新技术企业和新兴产业企业、初创期和成长期及转型升级企业，涵盖信息科技、互联网/新媒体、生物医药、新能源/节能环保、化工/新材料、高端装备制造、消费品/现代服务等国家政策重点扶持的行业领域。
+                        截至2018年3月底，深创投投资企业数量、投资企业上市数量均位居国内创投行业第一位：已投资项目859个，累计投资金额约352亿元，其中138家投资企业分别在全球16个资本市场上市。专业的投资、深度的服务、严密的风控，成就了深创投创投业务IRR 40.32%的优秀业绩。
                     </div>
-                    <div></div>
-                    <div></div>
+                    <div>
+                        深圳市创新投资集团有限公司（简称“深创投”）是深圳市政府1999年出资并引导社会资本出资设立的、专业从事创业投资的有限责任公司。公司成立以来始终致力于培育民族产业、塑造民族品牌、促进经济转型升级和新兴产业发展。目前注册资本42亿元，管理各类基金总规模约2803.23亿元。
+                        深创投主要投资中小企业、自主创新高新技术企业和新兴产业企业、初创期和成长期及转型升级企业，涵盖信息科技、互联网/新媒体、生物医药、新能源/节能环保、化工/新材料、高端装备制造、消费品/现代服务等国家政策重点扶持的行业领域。
+                        截至2018年3月底，深创投投资企业数量、投资企业上市数量均位居国内创投行业第一位：已投资项目859个，累计投资金额约352亿元，其中138家投资企业分别在全球16个资本市场上市。专业的投资、深度的服务、严密的风控，成就了深创投创投业务IRR 40.32%的优秀业绩。
+                    </div>
+                    <div>
+                        深圳市创新投资集团有限公司（简称“深创投”）是深圳市政府1999年出资并引导社会资本出资设立的、专业从事创业投资的有限责任公司。公司成立以来始终致力于培育民族产业、塑造民族品牌、促进经济转型升级和新兴产业发展。目前注册资本42亿元，管理各类基金总规模约2803.23亿元。
+                        深创投主要投资中小企业、自主创新高新技术企业和新兴产业企业、初创期和成长期及转型升级企业，涵盖信息科技、互联网/新媒体、生物医药、新能源/节能环保、化工/新材料、高端装备制造、消费品/现代服务等国家政策重点扶持的行业领域。
+                        截至2018年3月底，深创投投资企业数量、投资企业上市数量均位居国内创投行业第一位：已投资项目859个，累计投资金额约352亿元，其中138家投资企业分别在全球16个资本市场上市。专业的投资、深度的服务、严密的风控，成就了深创投创投业务IRR 40.32%的优秀业绩。
+                    </div>
                 </div>
             </div>
-
+        </div>
+        <div id="footer">
+            <div class="wrap">
+                <img id="img-dytzgl" src="img/dytzgl.png" alt="dytzgl">
+                <div class="copyright-tel">
+                    <p class="ct-instr">
+                        版权所有 © XXXXX公司 保留一切权利</p>
+                    <p class="ct-instr"></p>
+                    <p class="ct-instr">
+                        业务咨询电话：0760-22517081 / 0760-22517082
+                    </p>
+                </div>
+                <div class="code">
+                    <img src="img/ewm.jpg" alt="erweima">
+                </div>
+                <div class="ico">
+                    <p class="ioc-title">扫描微信二维码 关注最新投资信息</p>
+                    <ul class="ioc-ul">
+                        <li>
+                            <a  class="qq ioc-pt" href="#"></a>
+                        </li>
+                        <li>
+                            <a class="weixin ioc-pt" href="#"></a>
+                        </li>
+                        <li>
+                            <a class="weibo ioc-pt" href="#"></a>
+                        </li>
+                    </ul>
+                </div>
+                <p  class="copyright-instru">
+                    <a class="cpr-instru">PageAdmin企业网站管理系统版权所有 Copyright © 2008-2009&nbsp&nbsp&nbspwww.pageadmin.net</a>
+                </p>
+            </div>
         </div>
         <script src="js/about.js"></script>
 </body>
